--- a/gofeatup/src/css/login.css
+++ b/gofeatup/src/css/login.css
@@ -34,7 +34,7 @@
   color: white !important;
 }
 
-.form-control, .form-control::placeholder, .css-yk16xz-control, .css-1wa3eu0-placeholder, .css-26l3qy-menu, .css-1f43avz-a11yText-A11yText, .css-1pahdxg-control {
+.form-control, .form-control::placeholder, .css-yk16xz-control, .css-1wa3eu0-placeholder, .css-26l3qy-menu, .css-1f43avz-a11yText-A11yText, .css-1pahdxg-control, .css-1uccc91-singleValue {
   background-color: #3E1747 !important;
   border-color: #3E1747 !important;
   color: white !important;;
