--- a/gofeatup/src/css/myApp.css
+++ b/gofeatup/src/css/myApp.css
@@ -1,6 +1,7 @@
 .noPadding {
   padding-left: 0px !important;
   padding-right: 0px !important;
+  background-color: #050007 !important;
 }
 
 .sideBarBack{
