--- a/gofeatup/src/css/critere.css
+++ b/gofeatup/src/css/critere.css
@@ -7,11 +7,13 @@
 .critereButonColor{
   background-color: #4708D5 !important;
   border-color: #4708D5 !important;
+  border-radius: 10px!important;
 }
 
 .butonColorCritere{
   background-color: #4708D5 !important;
   border-color: #4708D5 !important;
+  border-radius: 10px!important;
 }
 
 .sizeSelect .css-yk16xz-control{
