--- a/gofeatup/src/css/sideBar.css
+++ b/gofeatup/src/css/sideBar.css
@@ -14,7 +14,7 @@
   margin-left: 20%;
 }
 .secondMenu:hover{
-  color: #C602C9;
+  color: #EAD83E;
 }
 
 .fullSecondMenu{
@@ -28,8 +28,8 @@
 }
 
 .mySvg:hover > svg > g{
-  fill: #C602C9;
+  fill: #EAD83E;
 }
 .mySvg:hover{
-  color: #C602C9;
+  color: #EAD83E;
 }
